--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,12 +1,12 @@
 {
-	"bannerRemoved": "Banner removed! You can re-enable the banner in {placeholder}.",
-	"bannerRemovedMenu": "Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.",
-	"bannerSettings": "Banner Settings",
-	"changeImage": "Change Image",
-	"closeSimpleOverlayAltText" : "Close Dialog",
-	"customizeBannerText" : "Customize Banner Text",
-	"refreshAndTryAgain": "Refresh and try again",
-	"removeBanner": "Remove This Banner",
-	"somethingWentWrong": "Oops! Something went wrong. {placeholder}.",
-	"undo": "Undo"
+   "bannerRemoved" : "Bannière supprimée! Vous pouvez la réactiver dans le {paramètre fictif}.",
+   "bannerRemovedMenu" : "Bannière supprimée! Vous pouvez la réactiver par l’intermédiaire du menu de la page d’accueil en bas de l’écran.",
+   "bannerSettings" : "Paramètres de la bannière",
+   "changeImage" : "Modifier l'image",
+   "closeSimpleOverlayAltText" : "Fermer la boîte de dialogue",
+   "customizeBannerText" : "Personnaliser le texte de la bannière",
+   "refreshAndTryAgain" : "Actualisez la page et réessayez",
+   "removeBanner" : "Supprimer cette bannière",
+   "somethingWentWrong" : "Oups! Un problème est survenu. {paramètre fictif}.",
+   "undo" : "Annuler"
 }
