--- a/lang/sv.json
+++ b/lang/sv.json
@@ -1,12 +1,12 @@
 {
-	"bannerRemoved": "Banner removed! You can re-enable the banner in {placeholder}.",
-	"bannerRemovedMenu": "Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.",
-	"bannerSettings": "Banner Settings",
-	"changeImage": "Change Image",
-	"closeSimpleOverlayAltText" : "Close Dialog",
-	"customizeBannerText" : "Customize Banner Text",
-	"refreshAndTryAgain": "Refresh and try again",
-	"removeBanner": "Remove This Banner",
-	"somethingWentWrong": "Oops! Something went wrong. {placeholder}.",
-	"undo": "Undo"
+   "bannerRemoved" : "Banner borttagen! Du återaktiverar den i .",
+   "bannerRemovedMenu" : "Banner borttagen! Du kan återaktivera bannern med hjälp av hemsidesmenyn längst ned på skärmen.",
+   "bannerSettings" : "Banner Settings",
+   "changeImage" : "Ändra bild",
+   "closeSimpleOverlayAltText" : "Stäng dialogruta",
+   "customizeBannerText" : "Customize Banner Text",
+   "refreshAndTryAgain" : "Refresh and try again",
+   "removeBanner" : "Ta bort banner",
+   "somethingWentWrong" : "Hoppsan! Något gick fel. (Platshållare)",
+   "undo" : "Ångra"
 }
