--- a/lang/tr.json
+++ b/lang/tr.json
@@ -1,12 +1,12 @@
 {
-	"bannerRemoved": "Banner removed! You can re-enable the banner in {placeholder}.",
-	"bannerRemovedMenu": "Banner removed! You can re-enable the banner using the Homepage menu at the bottom of the screen.",
-	"bannerSettings": "Banner Settings",
-	"changeImage": "Change Image",
-	"closeSimpleOverlayAltText" : "Close Dialog",
-	"customizeBannerText" : "Customize Banner Text",
-	"refreshAndTryAgain": "Refresh and try again",
-	"removeBanner": "Remove This Banner",
-	"somethingWentWrong": "Oops! Something went wrong. {placeholder}.",
-	"undo": "Undo"
+   "bannerRemoved" : "Başlık kaldırıldı! {placeholder} konumundan başlığı yeniden etkinleştirebilirsiniz.",
+   "bannerRemovedMenu" : "Başlık kaldırıldı! Ekranın alt kısmındaki Ana Sayfa menüsünü kullanarak başlığı yeniden etkinleştirebilirsiniz.",
+   "bannerSettings" : "Başlık Ayarları",
+   "changeImage" : "Görüntüyü Değiştir",
+   "closeSimpleOverlayAltText" : "İletişim Kutusunu Kapat",
+   "customizeBannerText" : "Başlık Sayfası Metnini Kişiselleştir",
+   "refreshAndTryAgain" : "Yenileyin ve tekrar deneyin",
+   "removeBanner" : "Bu Başlığı Sil",
+   "somethingWentWrong" : "Üzgünüz! Bir sorun oluştu. {placeholder}.",
+   "undo" : "Geri Al"
 }
