--- a/lang/ar.json
+++ b/lang/ar.json
@@ -5,6 +5,7 @@
    "changeImage" : "تغيير الصورة",
    "closeSimpleOverlayAltText" : "إغلاق مربع الحوار",
    "customizeBannerText" : "تخصيص نص الشعار",
+   "imageLoadingError" : "عذرًا! يتعذّر تحميل صورة المقرر التعليمي، ربما تم نقلها أو حذفها.",
    "refreshAndTryAgain" : "التحديث وإعادة المحاولة",
    "removeBanner" : "إزالة هذا الشعار",
    "somethingWentWrong" : "عذرًا! حدث خطأ ما. {placeholder}.",
