--- a/lang/de.json
+++ b/lang/de.json
@@ -5,6 +5,7 @@
    "changeImage" : "Bild ändern",
    "closeSimpleOverlayAltText" : "Dialogfeld schließen",
    "customizeBannerText" : "Bannertext anpassen",
+   "imageLoadingError" : "Hoppla! Kurssymbol kann als Bild nicht geladen werden; es wurde möglicherweise verschoben oder gelöscht.",
    "refreshAndTryAgain" : "Neu laden und erneut versuchen",
    "removeBanner" : "DIeses Banner entfernen",
    "somethingWentWrong" : "Hoppla! Etwas ist schiefgelaufen. {placeholder}.",
