--- a/lang/nl.json
+++ b/lang/nl.json
@@ -5,6 +5,7 @@
    "changeImage" : "Afbeelding wijzigen",
    "closeSimpleOverlayAltText" : "Dialoogvenster sluiten",
    "customizeBannerText" : "Bannertekst aanpassen",
+   "imageLoadingError" : "Oeps! Kan cursusafbeelding niet laden. Deze is mogelijk verplaatst of verwijderd.",
    "refreshAndTryAgain" : "Vernieuw en probeer het opnieuw",
    "removeBanner" : "Deze banner verwijderen",
    "somethingWentWrong" : "Oeps! Er is iets fout gegaan. {placeholder}.",
