--- a/lang/tr.json
+++ b/lang/tr.json
@@ -5,6 +5,7 @@
    "changeImage" : "Görüntüyü Değiştir",
    "closeSimpleOverlayAltText" : "İletişim Kutusunu Kapat",
    "customizeBannerText" : "Başlık Sayfası Metnini Kişiselleştir",
+   "imageLoadingError" : "Üzgünüz! Ders görüntüsü yüklenemiyor, taşınmış veya silinmiş olabilir.",
    "refreshAndTryAgain" : "Yenileyin ve tekrar deneyin",
    "removeBanner" : "Bu Başlığı Sil",
    "somethingWentWrong" : "Üzgünüz! Bir sorun oluştu. {placeholder}.",
