--- a/lang/es-es.json
+++ b/lang/es-es.json
@@ -3,11 +3,11 @@
    "bannerRemovedMenu" : "Banner eliminado. Puede volver a habilitar el banner a través del menú de la página de inicio que se encuentra en la parte inferior de la pantalla.",
    "bannerSettings" : "Configuración de banner",
    "changeImage" : "Cambiar imagen",
-   "closeSimpleOverlayAltText" : "Cerrar cuadro de diálogo",
+   "closeSimpleOverlayAltText" : "Cerrar el cuadro de diálogo",
    "customizeBannerText" : "Personalizar texto del banner",
    "imageLoadingError" : "Lo sentimos. No se puede cargar la imagen del curso, es posible que se haya movido o eliminado.",
    "refreshAndTryAgain" : "Actualizar y volver a intentarlo",
    "removeBanner" : "Quitar este banner",
-   "somethingWentWrong" : "Lo sentimos. Se produjo un error. {placeholder}.",
+   "somethingWentWrong" : "Lo sentimos. Algo no funciona. {placeholder}.",
    "undo" : "Deshacer"
 }
