--- a/lang/fr.json
+++ b/lang/fr.json
@@ -2,9 +2,9 @@
    "bannerRemoved" : "Bannière supprimée! Vous pouvez la réactiver dans le {paramètre fictif}.",
    "bannerRemovedMenu" : "Bannière supprimée! Vous pouvez la réactiver par l’intermédiaire du menu de la page d’accueil en bas de l’écran.",
    "bannerSettings" : "Paramètres de la bannière",
-   "changeImage" : "Modifier l'image",
+   "changeImage" : "Modifier l’image",
    "closeSimpleOverlayAltText" : "Fermer la boîte de dialogue",
-   "customizeBannerText" : "Personnaliser le texte de la bannière",
+   "customizeBannerText" : "Personnaliser le texte de bannière",
    "imageLoadingError" : "Oups! Impossible de charger l’image du cours, elle pourrait avoir été déplacée ou supprimée.",
    "refreshAndTryAgain" : "Actualisez la page et réessayez",
    "removeBanner" : "Supprimer cette bannière",
