--- a/lang/pt.json
+++ b/lang/pt.json
@@ -2,7 +2,7 @@
    "bannerRemoved" : "Banner removido! Você pode reativar o banner em {placeholder}.",
    "bannerRemovedMenu" : "Banner removido! Você pode reativar o banner usando o menu Página inicial, na parte inferior da tela.",
    "bannerSettings" : "Configurações do banner",
-   "changeImage" : "Alterar imagem",
+   "changeImage" : "Alterar Imagem",
    "closeSimpleOverlayAltText" : "Fechar caixa de diálogo",
    "customizeBannerText" : "Personalizar o texto do banner",
    "imageLoadingError" : "Opa! Não é possível carregar a imagem do curso, talvez ela tenha sido movida ou excluída.",
