--- a/lang/tr.json
+++ b/lang/tr.json
@@ -3,8 +3,8 @@
    "bannerRemovedMenu" : "Başlık kaldırıldı! Ekranın alt kısmındaki Ana Sayfa menüsünü kullanarak başlığı yeniden etkinleştirebilirsiniz.",
    "bannerSettings" : "Başlık Ayarları",
    "changeImage" : "Görüntüyü Değiştir",
-   "closeSimpleOverlayAltText" : "İletişim Kutusunu Kapat",
-   "customizeBannerText" : "Başlık Sayfası Metnini Kişiselleştir",
+   "closeSimpleOverlayAltText" : "Diyaloğu Kapat",
+   "customizeBannerText" : "Başlık Sayfasını Özelleştir",
    "imageLoadingError" : "Üzgünüz! Ders görüntüsü yüklenemiyor, taşınmış veya silinmiş olabilir.",
    "refreshAndTryAgain" : "Yenileyin ve tekrar deneyin",
    "removeBanner" : "Bu Başlığı Sil",
