--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -8,6 +8,6 @@
    "imageLoadingError" : "糟糕！無法載入課程影像，它可能已遭移動或刪除。",
    "refreshAndTryAgain" : "重新整理並再試一次",
    "removeBanner" : "移除此橫幅",
-   "somethingWentWrong" : "糟糕！發生某些錯誤。{placeholder}。",
+   "somethingWentWrong" : "糟糕！發生錯誤。{placeholder}。",
    "undo" : "復原"
 }
